[BUGFIX] [DD-838] toggle button z-index

--- a/yo/app/styles/views/mapping.less
+++ b/yo/app/styles/views/mapping.less
@@ -705,6 +705,8 @@ button.close-transformation-selector {
   -o-transition: all 0.3s;
   transition: all 0.3s;
 
+  z-index: 1000;
+
   &.offCanvasToggleButtonLeft {
     left: -55px;
 
